# maxis-bot

./: .gitignore  README.md  fix_cloud.py  package-lock.json  package.json  patch.py
docs/: HANDOFF.md  implementation_plan.md  task.md  walkthrough.md
maxis-core/: Dockerfile  pyproject.toml  render.yaml  test_emotion.py  test_os_tools.py
maxis-core/maxis/: __init__.py  config.py  main.py
maxis-core/maxis/api/: routes.py  websocket.py
maxis-core/maxis/core/: __init__.py  active_mind.py  daemon.py  identity.py  orchestrator.py  self_awareness.txt
maxis-core/maxis/emotion/: __init__.py  engine.py  state.py
maxis-core/maxis/intelligence/: __init__.py  llm_router.py  token_budget.py
maxis-core/maxis/memory/: chat_history.py  compression.py  emotional.py  episodic.py  manager.py  person.py  procedural.py  semantic.py  working.py
maxis-core/maxis/static/: index.html
maxis-core/maxis/system/: os_tools.py  screen.py
maxis-core/maxis/vision/: face_recognition.py
maxis-core/maxis/voice/: tts.py
